/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

import public "teamcloud/v1/alternate_identity.proto";

message UserAlternateIdentities {

  AlternateIdentity AzureResourceManager = 262385330;

  AlternateIdentity AzureDevOps = 146600535;

  AlternateIdentity GitHub = 522555366;

  AlternateIdentity Kubernetes = 526801051;

}
